updated some fonts, added date, and tried a typing thing.

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Markazi+Text|Maven+Pro|Merriweather" rel="stylesheet">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/cp_logo_draft.jpg"> <!-- soz the react logo was triggering me -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
