--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Markazi+Text|Maven+Pro|Merriweather" rel="stylesheet">
 
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/cp_logo_draft.jpg"> <!-- soz the react logo was triggering me -->
     <!--
